# EZ-VC

./: .gitignore  README.md  pyproject.toml
src/f5_tts/default/: __init__.py  ezvc.py
src/f5_tts/infer/: utils_infer.py  utils_xeus.py
src/f5_tts/model/: __init__.py
